--- a/css/custom.css
+++ b/css/custom.css
@@ -4,14 +4,17 @@ html {
 }
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
+  color: white;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+  background-color: #30343F;
+
 }
 
 span, a, .contact-info {
@@ -24,4 +27,34 @@ ul.contact-info {
 
 p.about{
   font-size: 36px;
+}
+
+.but {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.but-link {
+  color: #272838
+}
+
+h1 {
+  font-size: 100px;
+}
+
+.btn-lg {
+  width: 200px;
+  height: 60px;
+  font-size: 20px;
+}
+
+body {
+  height: 100px;
+  background-color: #0091CC;
+  background-image:
+    linear-gradient(
+      to top right,
+      #0091CC, #9B26B6
+    );
 }
