--- a/css/custom.css
+++ b/css/custom.css
@@ -5,28 +5,45 @@ html {
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
   color: white;
+  font-family: 'Numans', sans-serif;
+  height: 100px;
+  background-color: #0091CC;
+  background-image:
+    linear-gradient(
+      to top right,
+      #0091CC, #9B26B6
+    );
+}
+
+.nav-link {
+  font-size: 20px;
+  font-family: 'Numans', sans-serif;
 }
 
 .footer {
   position: absolute;
+  right: 0;
   bottom: 0;
-  width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
+  left: 0;
+  padding: 1rem;
   background-color: #30343F;
-
+  text-align: center;
 }
 
-span, a, .contact-info {
-  color: #386FA4;
+.phone, a, .contact-info {
+  color: #D3D3D3;
 }
 
-ul.contact-info {
+.phone:hover, a:hover, .contact-info:hover {
+  color: #878787;
+}
+
+ul {
   font-size: 30px
 }
 
 p.about{
-  font-size: 36px;
+  font-size: 26px;
 }
 
 .but {
@@ -43,18 +60,16 @@ h1 {
   font-size: 100px;
 }
 
+hr {
+  background-color:white;
+}
+
+.star {
+  font-size: 30px;
+}
+
 .btn-lg {
   width: 200px;
   height: 60px;
   font-size: 20px;
-}
-
-body {
-  height: 100px;
-  background-color: #0091CC;
-  background-image:
-    linear-gradient(
-      to top right,
-      #0091CC, #9B26B6
-    );
 }
